# ai-unboxing-mcp

./: .gitignore  README.md
day-2/complete-weather-server/: README.md
day-2/complete-weather-server/mcp_open_meteo/: config.py  constants.py  location_resolver.py  models.py  prompts.py  server.py  tools.py
day-2/dev-weather-server/: README.md  pyproject.toml
day-2/dev-weather-server/mcp_open_meteo/: api_client.py  config.py  models.py  prompts.py  resources.py  server.py  tools.py
day-2/fridge-manager-challenge/: README.md
day-2/fridge-manager-challenge/fridge/: __init__.py  fridge_contents.csv  fridge_utils.py
day-2/simple-server/: README.md
day-2/simple-server/simple-mcp-server/: __init__.py  pyproject.toml  server.py
day-3/elicitation-weather-server/: README.md  pyproject.toml
day-3/elicitation-weather-server/mcp_open_meteo_elicit/: __init__.py  __main__.py  api_client.py  config.py  location_resolver.py  models.py  resources.py  server.py  tools.py
day-3/simple-elicitation-server/: README.md  pyproject.toml  server.py
day-5/: README.md
day-5/weather-server-github-auth/: package-lock.json  package.json  worker-configuration.d.ts  wrangler.jsonc
day-5/weather-server-github-auth/src/: index.ts  location-resolver.ts  weather-api.ts  weather-config.ts  weather-types.ts
